# cabalg

./: .gitignore  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  LICENSE  Main.hs  README.markdown  broken.cabal  cabalg.cabal
script/: sdist-unpack-install.sh
src/: Args.hs  Git.hs  Main.hs  Sandbox.hs
src/Cabalg/: Args.hs  Git.hs  Version.hs
src/System/Directory/: NonExistent.hs
test/: Doctest.hs  Test.hs
