name:                broken
version:             0.1.0.0
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Main
  build-depends:       base < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
