name:                cabalg
version:             0.0.0.0
synopsis:            cabal install from git directly
homepage:            -
license:             MIT
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable cabalg
  main-is:             src/Main.hs
  build-depends:       base >= 4.6,
                       process >= 1.2,
                       regex-pcre-builtin >= 0.94,
                       directory >= 1.2,
                       filepath >= 1.3
  default-language:    Haskell2010
