name:                cabalg
version:             0.0.0.0
synopsis:            alias for cabal install from given git repo in temporary directory
license:             MIT
license-file:        LICENSE
author:              Dmitry Malikov
maintainer:          malikov.d.y@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable cabalg
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Git

  build-depends:       base                 >= 4.6,
                       process              >= 1.2,
                       directory            >= 1.2,
                       filepath             >= 1.3,
                       optparse-applicative >= 0.7.0.2,
                       temporary            >= 1.1.2.4

  default-language:    Haskell2010
