name: cabalg
version: 0.1.3
synopsis: alias for cabal install from given git repo
license: MIT
license-file: LICENSE
author: Dmitry Malikov
maintainer: malikov.d.y@gmail.com
build-type: Simple
cabal-version: >=1.10
description:
  Short alias for installing cabal package from git source repository.
  .
  I.e.
  .
  @$> cabalg git:\/\/github.com\/biegunka\/biegunka.git
  @
  .
  is just a shorthand for
  .
  @$> mktemp
  $> git clone --single-branch --depth=1 --quiet git:\/\/github.com\/biegunka\/biegunka.git <tempdirname>
  $> cabal install <tempdirname>/<cabalfilename>
  .
  Also notice, that '--single-branch' flag  comes with git-1.7.10 (<https://lkml.org/lkml/2012/3/28/418>) and later, so you probably want to have it.
  .
  Hope it is windows-compatible.

executable cabalg
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: Git

  build-depends:
      base >= 4 && < 5
    , process >= 1.2
    , directory >= 1.2
    , filepath >= 1.3
    , temporary >= 1.1.2.4
    , filemanip >= 0.3.5.2
    , split >= 0.2.2

  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/dmalikov/cabalg
